sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:5: error: illegal start of simple expression
  var i = 0 ;
  ^